# EUSDAB

./: .gitignore  .gitmodules  :wq  CMakeLists.txt  Makefile  README.md  app.sh  bugs  coucou  ctags.sh  eusdab.sh  fork.sh  run.sh  test
assets/: entities.json
assets/entities/: entities.json  entities.txt
assets/entities/botato/: entity.json
assets/entities/botato/animations/air_dodge_right/: animation.json
assets/entities/botato/animations/botA_right/: animation.json
assets/entities/botato/animations/botB_right/: animation.json
assets/entities/botato/animations/botdodge_right/: animation.json
assets/entities/botato/animations/crouch_left/: animation.json
assets/entities/botato/animations/crouch_right/: animation.json
assets/entities/botato/animations/drop_right/: animation.json
assets/entities/botato/animations/falling/: animation.json
assets/entities/botato/animations/grab_right/: animation.json
assets/entities/botato/animations/guard_left/: animation.json
assets/entities/botato/animations/guard_right/: animation.json
assets/entities/botato/animations/haul_right/: animation.json
assets/entities/botato/animations/idle_right/: animation.json
assets/entities/botato/animations/jump/: animation.json
assets/entities/botato/animations/neutralA_1_left/: animation.json
assets/entities/botato/animations/neutralA_1_right/: animation.json
assets/entities/botato/animations/neutralA_2_right/: animation.json
assets/entities/botato/animations/neutralA_3_left/: animation.json
assets/entities/map_bar/: entity.json
assets/entities/map_bazar/: entity.json
assets/entities/map_demo/: entity.json
assets/entities/nyan_cat/: entity.json
assets/entities/panda/: entity.json
assets/entities/poney/: entity.json
assets/entities/rickhard/: entity.json
assets/entities/rickhard/animations/: idle_right.json
assets/shader/: filter.vert  raindow.frag  wave.vert
data/: clochard.json  tileset-big.ts  tileset.ts
include/: HPLife.h  Polygone.h  action.h  aerialAttack.h  aerialAttackDown.h  aerialAttackLeft.h  aerialAttackRight.h  aerialAttackUp.h  aerialDodge.h  aerialDodgeLeft.h  aerialDodgeRight.h  aerialHit.h  aerialHitLeft.h  aerialHitRight.h  aerialSpecial.h  aerialSpecialDown.h  aerialSpecialLeft.h  aerialSpecialRight.h  aerialSpecialUp.h  animation.h  animationparser.h  application.h  attack.h  attackDash.h  attackDown.h  attackLeft.h  attackRight.h  attackUp.h  character.h  characterState.h  charracterState.h  config.h  constants.h  crouch.h  crouchLeft.h  crouchRight.h  dodge.h  dodgeLeft.h  dodgeRight.h  drawable.h  (+72 more)
include/components/: attack.h
include/graphics/: animated.h  controller.h  controller.inl  drawable.h  soundmanager.h  texturemanager.h
include/input/: controller.h  event.h  joystickmapping.h  keyboardmapping.h  listener.h  mapping.h  speaker.h  state.h
include/input/states/: idle.h  test.h
include/parsers/: base.h  json.h
include/physics/: <  aabb.h  component.h  config.h  controller.h  hitbox.h  interval.h  obb2.h  transform.h  vector2.h  world.h
include/states/: aerialAttack.h  aerialDodge.h  aerialHit.h  aerialSpecial.h  all.h  attack.h  attackDash.h  baseState.h  crouch.h  dodge.h  ejected.h  falling.h  grab.h  guard.h  haul.h  helpless.h  hit.h  idle.h  jump.h  jump1.h  jump2.h  landing.h  motion.h  run.h  shield.h  shieldBreak.h  smash.h  special.h  stand.h  stunned.h  test.h  wait.h  walk.h
include/util/: filename.h  string.h
include/utils/: interval.h
include/view/: controller.h
lib/SFML-2.0-rc/lib64/: libGLEW.so.1.5  libsfml-audio.so.2.1  libsfml-system.so.2.1
lib/SFML-2.0/lib64/: libsfml-graphics.so.2.1  libsfml-network.so.2.1  libsfml-window.so.2.1
scripts/: FlipAnimation.py  GenLeft.sh  HOWTO.txt  HitboxMaker.py  Menu.py
src/: <  CMakeLists.txt  HPLife.cpp  animation.cpp  animationparser.cpp  application.cpp  attack.cpp  character.cpp  characterState.cpp  crouch.cpp  entity.cpp  entitycontroller.cpp  entityparser.cpp  entitywithmask.cpp  graphics.cpp  grpahics.cpp  hitbox.cpp  idle.cpp  image.cpp  infiniteLife.cpp  joystick.cpp  jump1.cpp  life.cpp  listener.cpp  main.cpp  main_application.cpp  map.cpp  movement.cpp  percentageLife.cpp  percentagelife.cpp  platform.cpp  polygone.cpp  run.cpp  smash.cpp  soundmanager.cpp  speaker.cpp  state.cpp  textureManager.cpp  texturemanager.cpp  tileset.cpp  (+3 more)
src/graphics/: animated.cpp  controller.cpp  drawable.cpp  soundmanager.cpp  texturemanager.cpp
src/input/: controller.c  controller.cpp  event.cpp  joystickmapping.cpp  keyboardmapping.cpp  kmapping.cpp  listener.cpp  speaker.cpp  state.cpp
src/input/states/: idle.cpp  test.cpp
src/parsers/: base.cpp  json.cpp
src/physics/: component.cpp  controller.cpp  hitbox.cpp  transform.cpp  world.cpp
src/states/: Guard.cpp  Special.cpp  aerialAttack.cpp  aerialDodge.cpp  aerialHit.cpp  attack.cpp  baseState.cpp  crouch.cpp  dodge.cpp  falling.cpp  grab.cpp  guard.cpp  hit.cpp  idle.cpp  jump.cpp  jump1.cpp  motion.cpp  run.cpp  shield.cpp  shieldBreak.cpp  smash.cpp  special.cpp  stunned.cpp  test.cpp  test.tamere  wait.cpp  walk.cpp
src/util/: filename.cpp  string.cpp
src/view/: controller.cpp
test/: Makefile  joystick.cpp.bak  joystick_mapping.conf  main.cpp
test/json/: Makefile  clochard.json  main.cpp
test/json/include/: entitybuilder.h
test/json/src/: main.cpp
test/physics/: Makefile  interval.h  main.cpp  obb2.h  vector2.h
tests/: CMakeLists.txt  HOWTO.md
tests/animation/: CMakeLists.txt  main.cpp  testanimation.cpp  testanimation.h
tests/animation/nyan_cat/: animation.json
tests/entity/: main.cpp  testentity.cpp  testentity.h
tests/eusdab/: main.cpp  my_application.cpp  my_application.h
tests/hitboxes/: main.cpp  testhitbox.cpp  testhitbox.h
tests/input/: CMakeLists.txt  main.cpp  testinput.cpp  testinput.h
tests/joystick/: joystick.txt  main.cpp  painter.h  testJoystick.cpp  testJoystick.h
tests/painter/: main.cpp  painter.cpp  painter.h  testPainter.cpp  testPainter.h
tests/states/: main.cpp  teststates.cpp  teststates.h
uml/: main-states.dia  models.dia
(+252 files in other folders)
